mays rubaye information added

--- a/hackathon.html
+++ b/hackathon.html
@@ -44,9 +44,9 @@
         <th>Fun Fact (or favorite programming language)</th>
       </tr>
       <tr>
-        <td>Megan</td>
-        <td>Lucky Charms</td>
-        <td>I like planning events</td>
+        <td>Mays</td>
+        <td>none</td>
+        <td>I don't like norms</td>
       </tr>
     </table>
 
